--- a/angular.json
+++ b/angular.json
@@ -71,11 +71,11 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Smoking-course-client:build:production"
+              "buildTarget": "Smoking-course-client:build:production"
             },
             "development": {
-              "browserTarget": "Smoking-course-client:build:development",
-              "proxyConfig": "src/proxy.conf.json"
+              "proxyConfig": "src/proxy.conf.json",
+              "buildTarget": "Smoking-course-client:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -83,7 +83,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Smoking-course-client:build"
+            "buildTarget": "Smoking-course-client:build"
           }
         },
         "test": {
