--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/video.js": "^7.3.56",
     "@videojs/themes": "^1.0.1",
     "jwt-decode": "^4.0.0",
+    "ng-recaptcha": "^13.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "video.js": "^8.6.1",
