--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "ng-recaptcha": "^13.2.1",
     "rxjs": "~7.8.0",
+    "spdy": "^4.0.2",
     "tslib": "^2.3.0",
     "video.js": "^8.6.1",
     "zone.js": "~0.14.3"
